force-app/main/default/objects/Corporate_Client__c/Corporate_Client__c.object-meta.xml
<CustomObject>
    <label>Corporate Client</label>
    <nameField>
        <displayFormat>CORP-{0000}</displayFormat>
        <label>Client Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Corporate Clients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>