force-app/main/default/objects/Corporate_Client__c/fields/Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue__c</fullName>
    <label>Annual Revenue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$1M-10M</fullName>
            </value>
            <value>
                <fullName>$10M-25M</fullName>
            </value>
            <value>
                <fullName>$25M-50M</fullName>
            </value>
            <value>
                <fullName>$50M-100M</fullName>
            </value>
            <value>
                <fullName>$100M-500M</fullName>
            </value>
            <value>
                <fullName>$500M+</fullName>
            </value>
            <value>
                <fullName>$100M+</fullName>
                <isActive>false</isActive>
                <label>$100M+</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>