force-app/main/default/objects/Corporate_Client__c/fields/Company_Size__c.field-meta.xml
<CustomField>
    <fullName>Company_Size__c</fullName>
    <label>Company Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small (10-99 employees)</fullName>
            </value>
            <value>
                <fullName>Medium (100-999 employees)</fullName>
            </value>
            <value>
                <fullName>Large (1000+ employees)</fullName>
            </value>
            <value>
                <fullName>Enterprise (10000+ employees)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>