force-app/main/default/objects/Corporate_Client__c/fields/Enrollments_Related_List__c.field-meta.xml
<CustomField>
    <fullName>Enrollments_Related_List__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Enrollments</label>
    <referenceTo>Course_Enrollment__c</referenceTo>
    <relationshipLabel>Corporate Client</relationshipLabel>
    <relationshipName>Corporate_Client</relationshipName>
    <type>Lookup</type>
</CustomField>